# blog

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  code-style.md
.github/: dependabot.yml
.github/workflows/: pr_tests.yml  svelte_publish.yml  test_frontend.yml
.sqlx/: query-07bd885aa7c33161c38743d930b59977c22dbd0cf35880a0e37d3d680a2f276a.json  query-54dd103a3b05b3a94c3e70193b551d1c091f8d6dd5fe3777bf01cde0e321cba3.json  query-9a2bd51c37abde4dcba5013a090288d0f6f2be48eb2106987c5ed4244558e813.json  query-a30683f5a885b5484d6012c36a59065a068dda21319c682de0110946cc9766b9.json  query-e66fd610b87e0475d951fe47771f6cc58f41458d6218cd5d42d45e5a673517b7.json
server/: .env  Cargo.toml
server/db/: blog.db  blog_meta.sql  db-diagram.er  erd_to_sql.py  frontmatter_to_sql.hs  frontmatter_to_sql.py  regen_db.sh  update_db.py
server/db/backups/: 20240124035327_blog-metadata.db  20240527174009_blog.db  20240527175452_blog.db
server/db/data/: 20240120064506_blog-metadata-values.sql  20240124084045_blog-metadata-values.sql  20240527215428_blog-metadata-values.sql
server/db/migrations/: 0_2_0_auth_comments_init.sql  0_2_0_users_Init.sql  20231209205748_authcomments.sql  20240107205714_blogmetadata.sql
server/migrations/: 20231129_init.sql
server/src/: app.rs  auth.rs  main.rs  routes.rs  services.rs  store.rs
server/src/auth/: login.rs  users.rs
server/src/middlewares/: authenticator.rs
server/src/music/: music.rs
server/src/routes/: app.rs  backend.rs  blogs.rs  comments.rs  data_api.rs  frontend.rs  pagination.rs  protected.rs  restricted.rs  session.rs
server/src/utils/: FormValidator.rs  workspace.rs
server/templates/: login.html  protected.html  restricted.html  signup.html
svelte_front/: .aiexclude  .eslintignore  .eslintrc.cjs  .gitignore  404.html  bundle-for-axum.sh  index.html  jsconfig.json  mdsvex.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.js
svelte_front/assets/: global.css
svelte_front/assets/icons/: alert.svelte  blog.svelte  chat.svelte  check.svelte  circle.svelte  documents.svelte  download.svelte  error.svelte  experience.svelte  external-link.svelte  features.svelte  footer-wave.svelte  info.svelte  internet.svelte  jb.svelte  markdown.svelte  pin.svelte  rss.svelte  star.svelte
svelte_front/assets/icons/socials/: discord.svelte  email.svelte  github.svelte  linkedin.svelte  telegram.svelte
svelte_front/assets/images/: Boulder.avif  key-plays.avif  lofi-gen.avif  project-structure.avif  pv-sports.avif
svelte_front/assets/images/blogs/: RapidRecap.avif  customize-template.avif  mdsvex.avif
svelte_front/assets/images/projects/: AppArchitectures.avif  Lofi.jfif  fft-noise.avif  lofi.avif
svelte_front/assets/md/: aboutme.mdx  aboutme.svx  markdown-guide.mdx  markdown-guide.svx
svelte_front/assets/md/blogs/: 0h-bible-study.md  0h-blog-ideas.mdx  0h-blog-template.mdx  0h-code-workflow.mdx  0h-design-tradeoffs.mdx  _blog-template.mdx  _blog-template.svx  amazon-experience.mdx  amazon-experience.svx  blog-explainer.mdx  blog-explainer.svx  (+28 more)
svelte_front/src/: App.svelte  app.css  main.js  vite-env.d.ts
svelte_front/src/pages/: About.svelte  Articles.svelte  Home.svelte  Login.svelte  Projects.svelte  rss.svelte
svelte_front/tst/: App.test.ts  test-template.ts
yew_front/: Cargo.toml  build-and-bundle.sh  bundle-for-axum.sh  index.html  index.scss  trunk.toml
yew_front/src/: _main.rs  main.rs  state.rs
(+115 files in other folders)
