[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
axum-extra = { version = "*", features = ["spa"] }
axum-sessions = "0.6"
clap = { version = "*", features = ["derive", "env"] }
log = "*"
tokio = { version = "*", features = ["full"] }
tower = "*"
tower-http = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }