[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum-login = "0.10.1"
# axum-extra = { version = "*", features = ["spa"] }
clap = { version = "4.4.10", features = ["derive", "env"] }
# log = "*"
password-auth = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "sqlite", "time"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.7.0"
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
